typescript/checker/tests/conformance/es2018/usePromiseFinally.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            59,
        ),
        hi: BytePos(
            66,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2018/usePromiseFinally.ts:4:20
  |
4 | let promise1 = new Promise(function(resolve, reject) {})
  |                    ^^^^^^^

